change styles of reviews gallery

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     @@include('parts/primary.html')
     @@include('parts/advantages.html')
     @@include('parts/gallery.html')
+    @@include('parts/reviews-gallery.html')
     @@include('parts/promotes&leasing.html')
     @@include('parts/choose_complectation.html')
     @@include('parts/awards.html')
